# frames_viewer_rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yaml
examples/: basic.py  basic.rs  stress_test.py  utils_demo.py
frames_viewer/: __init__.py  frames_viewer.pyi  utils.py  utils.pyi
frames_viewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: camera.rs  lib.rs  python.rs  renderer.rs
